--- a/src/eventDisplay.css
+++ b/src/eventDisplay.css
@@ -1,6 +1,6 @@
 
 
-.eventDisplay{
+.event-display{
     z-index: 2;
     position: absolute;
     top: 100px;
@@ -8,5 +8,27 @@
     width: 80%;
     height: 400px;
     background-color: green;
+    justify-content: center;
+    display: flex;
+    overflow: auto;
 
 }
+
+.displayed-event{
+   
+    
+    width: 120px;
+    
+    
+    cursor: pointer;
+    background-color: lightpink;
+    border-radius: 10px;
+    height: 60px;
+    flex: auto;
+    
+}
+
+.event-display-container{
+    display: flex;
+}
+
