--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,5 @@
 
-*{
-  box-sizing:border-box;
-}
+
 
 .container{
   display: flex;
@@ -54,14 +52,18 @@
 }
 
 
-
-
-.scrollable-element{
-  display: flex;
-  overflow: auto;
-  height: 600px;
+.calendar-item{
+  flex: auto;
+  cursor: pointer;
+  background-color: lightpink;
+  border-radius: 10px;
+  height: 60px;
+  white-space: nowrap;
   
 }
 
-
+.calendar-item:hover {
+  background-image: linear-gradient(-222deg, #FF8494, #ffa9b7);
+  box-shadow: 0px 0px 52px -18px rgba(0, 0, 0, 0.75);
+}
 
