--- a/src/event.css
+++ b/src/event.css
@@ -1,33 +1,14 @@
 .event-item {
-   
-    
-    
-    
-  flex: auto;
+    flex: auto;
     cursor: pointer;
     background-color: lightpink;
     border-radius: 10px;
     height: 60px;
     white-space: nowrap;
-   
-   
-   
-
+    justify-content: center;
   }
 
-  .individual-time-placeholder{
-    position: relative;
-    width:300px;
-  }
-
-
-  .time-placeholder{
-    position: relative;
-     flex: auto;
-    font-size: 14px;
-    display: block;
-    
-}
+ 
 
   .event-container{
     
@@ -40,6 +21,9 @@
     box-shadow: 0px 0px 52px -18px rgba(0, 0, 0, 0.75);
 }
 
+.red{
+  background-color: red;
+}
 
 /*
 
