added start of zoning, not exactly sure if this is the correct direction so most of what was done might be overhauled or require modification of some sort.

--- a/src/calendar.css
+++ b/src/calendar.css
@@ -101,7 +101,13 @@
     margin-left: 10px;
   }
 
- 
+ .zoning-block{
+  height: 25px;
+  width: 100%;
+  background-color: #f2f2f2; /* example color, you can customize this */
+  border-bottom: 1px solid #e0e0e0;
+  padding-left: 10%;
+ }
 
 
 
