added more work for zoning, separated into different components zoning and zoningBlock both jsx files, also passes zoning schedule back to the app.jsx for now the schedule is color based but pretty easy to see blue = work or something similar. Will continue and soon will be able to create scheudles. Exciting

--- a/src/calendar.css
+++ b/src/calendar.css
@@ -15,7 +15,7 @@
 
   .days {
     display: grid;
-    grid-template-columns: 50px repeat(7, 300px);
+    grid-template-columns: 50px 50px repeat(7, 300px);
     overflow: auto;
     height: 500px;
     
@@ -106,8 +106,29 @@
   width: 100%;
   background-color: #f2f2f2; /* example color, you can customize this */
   border-bottom: 1px solid #e0e0e0;
-  padding-left: 10%;
+  
  }
+
+ .blue{
+  background-color: lightblue;
+ }
+ .grey{
+  background-color: lightslategray;
+ }
+ .green{
+  background-color: lightgreen;
+ }
+
+ .yellow{
+  background-color: rgb(235, 176, 66);
+ }
+
+ .brown{
+  background-color: rgb(192, 84, 84);
+ }
+
+
+
 
 
 
