--- a/src/app.css
+++ b/src/app.css
@@ -15,6 +15,7 @@ html, body {
 
 /*Right tab properties*/
 .right-tab{
+    width: 100%;
     min-width: 400px;
     margin-left: 2%;
     margin-top: 2%;
@@ -27,6 +28,7 @@ html, body {
     display: flex;
     justify-content:space-between;
     align-items: center;
+    margin-bottom: 2%;
 }
 
 .month-year{
@@ -184,52 +186,73 @@ width: 80px;
 .left-tab{
     min-width: 200px;
     
-    display: flex;
-    flex-direction: column;
-    
+    display: block;
+    background-color: #bef2fa;
+    background: linear-gradient(to right, #66d4c2, #ffffff);
 }
 
-.left-tab-top{
-    
-    width: 100%;
-    height: 152px;
-    flex-shrink: 0;
-    border-bottom-right-radius: 40px;
-    background: #D9D9D9;
-    position: relative;
-
-}
 .left-tab-left{
     position: absolute;
     width: 129px;
     height: 100%;
     flex-shrink: 0;
-    background: #D9D9D9;
+    background: #aee5e4;
     z-index: -1;
 }
-.left-tab-bottom{
-    position: relative;
+
+
+
+.left-tab-top{
     
-    width: 100%;
-    height: 648px;
+    width: 28.571%;
+    height: 100%;
+    bottom: 400px;
+    flex-shrink: 0;
+    border-bottom-right-radius: 40px;
+    background: #D9D9D9;
+    position: absolute;
+    transition: height 1s ease;
+
+}
+
+
+
+.left-tab-bottom{
+    position: absolute;
+    width: 28.571%;
+    
+    height: 100%;
     flex-shrink: 0;
     border-top-right-radius: 40px;
     background: #D9D9D9;
+    transition: top 1s ease;
 }
 
-.left-tab-option{
-    position: relative;
-    margin-left: 20%;
-    width: 80%;
+.left-tab-option {
+    
+    width: 79%;
     height: 100px;
+    margin-left: 20%;
     border-width: 0px;
     flex-shrink: 0;
     border-radius: 40px;
     background-color: #ffffff;
     z-index: 2;
-   
+  }
+  
+  .left-tab-option-container {
+    position: relative;
+    margin-top: 40%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; 
+    
+    gap: 50px;
+  }
+  
+
+.grey{
+    background-color: #c8c8c8;
 }
-
-
-
 
