--- a/src/modal.css
+++ b/src/modal.css
@@ -1,17 +1,26 @@
 
+/*Modal Z index 3 should always be top*/
 .modal{
     position:fixed;
     
-    width: 71.4%;
+    width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
-    
+    margin-right: 0px;
+    z-index: 3;
 }
 
 .modal-element{
-    justify-self: center;
-    margin-top: 20%;
+    display: flex;
+    flex-direction: column;
+    
+    width: 40%;
+    height: 40%;
+    background-color: rgb(164, 164, 164);
+    border-radius: 40px;
+    margin-top: 10%;
+    z-index: 1;
 }
 
 .modal-btn-container{
@@ -19,21 +28,35 @@
 }
 
 .modal-btn-close{}
-.modal-info{}
-.modal-input{}
-.modal-submit{}
+
+
+.modal-information-header{
+    color: #000;
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+.modal-information{
+    align-self: center;
+
+}
+.modal-input{
+    align-self: center;
+}
+.modal-btn-submit{
+    align-self: center;
+}
 .modal-overlay{
     position: absolute;
     width: 100%;
     height: 110%;
     padding: 0px;
-    margin-top: -5%;
-    margin-bottom: -4%;
-    margin-left: -4%;
-    background-color: linear grey;
-    background: linear-gradient(to right, rgb(255, 255, 255) , rgb(14, 14, 14));
+    background-color:  rgb(48, 28, 28);
+    z-index: 0;
     opacity: 70%;
-    z-index: -1;
+   
  
 
 }
@@ -42,3 +65,57 @@
     display: none;
 
 }
+
+.modal-label {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.2rem;
+    
+    margin-top: 0.7rem;
+    display: block;
+    transition: all 0.5s;
+    transform: translateY(0rem);
+  }
+  
+  .modal-input {
+    
+    font-family: 'Roboto', sans-serif;
+    color: #333;
+    font-size: 1.2rem;
+    margin: 0 auto;
+    text-align: center;
+    
+    background-color: rgb(255, 255, 255);
+    border: none;
+    width: 90%;
+    display: block;
+    border-bottom: 0.3rem solid transparent;
+    transition: all 0.3s;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+  }
+  
+  .modal-input:placeholder-shown + .modal-label {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transform: translateY(-4rem);
+    transform: translateY(-4rem);
+  }
+  
+
+.modal-form-group {
+    height: 100vh;
+    width: 100%;
+    background: #0f2027; /* fallback for old browsers */
+    background: linear-gradient(to right,#2c5364, #203a43, #0f2027);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    color: #fff;
+  }
+  
+
+  
