--- a/src/app.css
+++ b/src/app.css
@@ -128,6 +128,7 @@ width: 80px;
 
 
 .events{
+    position: relative;
     display :block;
     justify-content: center;
 }
@@ -136,10 +137,11 @@ width: 80px;
     position: absolute;
     left: 0;
     width: 100%;
-    height: 60px; /* Adjust as needed */
+    
+    border-radius: 15px;
     line-height: 60px; /* Center the text vertically */
     font-size: 14px;
-    background-color: #f0f0f0; /* Adjust background color */
+    background-color: #D9D9D9; /* Adjust background color */
     opacity: 0; /* Start with zero opacity */
     animation: fade-in 0.5s ease-out forwards; 
   }
@@ -153,12 +155,7 @@ width: 80px;
 
  
 
-.event-item{
-    width: 100%;
-    border-radius: 15px;
-    background-color: #D9D9D9;
-    position: relative;
-}
+
 .event-title{
     margin-top: 10%;
     margin-left: 10%;
