--- a/src/app.css
+++ b/src/app.css
@@ -182,25 +182,17 @@ width: 80px;
 
 .left-tab{
     min-width: 200px;
-    
     display: block;
     background-color: #bef2fa;
     background: linear-gradient(to right, #66d4c2, #ffffff);
+    z-index: 2;
 }
 
-.left-tab-left{
-    position: absolute;
-    width: 129px;
-    height: 100%;
-    flex-shrink: 0;
-    background: #aee5e4;
-    z-index: -1;
-}
 
 
 
 .left-tab-top{
-    
+    min-width: 200px; 
     width: 28.571%;
     height: 100%;
     bottom: 400px;
@@ -216,6 +208,7 @@ width: 80px;
 
 .left-tab-bottom{
     position: absolute;
+    min-width: 200px;
     width: 28.571%;
     
     height: 100%;
