--- a/src/modal.css
+++ b/src/modal.css
@@ -11,7 +11,7 @@
     z-index: 3;
 }
 
-.modal-element{
+.new-event-modal-element{
     display: flex;
     flex-direction: column;
     
@@ -48,7 +48,7 @@
 .modal-btn-submit{
     align-self: center;
 }
-.modal-overlay{
+.new-event-modal-overlay{
     position: absolute;
     width: 100%;
     height: 110%;
