--- a/src/zoningModal.css
+++ b/src/zoningModal.css
@@ -14,10 +14,36 @@
 
 }
 
+.filler-modal{
+  position: absolute;
+  left: 28.571% ;
+
+  width: 400px;
+  height: 100%;
+  min-height: 500px;
+  margin-top: 15%;
+  z-index: 3;
+
+  opacity: 0;
+}
+
+.task-modal{
+  position: absolute;
+    left: 28.571% ;
+
+    width: 400px;
+    height: 100%;
+    min-height: 500px;
+    margin-top: 20%;
+    z-index: 3;
+
+    opacity: 0;
+}
 
 
 
-.zoning-modal-overlay{
+
+.modal-overlay{
     
     z-index: 1;
     opacity: 0;
@@ -31,7 +57,7 @@
     opacity: 0%;
 }
 
-.zoning-modal-element{
+.modal-element{
     width: 536px;
     height: 441px;
     flex-shrink: 0;
@@ -84,9 +110,9 @@
   }
 
   @keyframes fade-out{
-    to {
+    100%{
       opacity: 0;
-      
+      display: none;
     }
   }
 
