--- a/src/app.css
+++ b/src/app.css
@@ -137,8 +137,10 @@ width: 80px;
     position: absolute;
     left: 0;
     width: 100%;
-    
+
+    border-color: transparent;
     border-radius: 15px;
+    
     line-height: 60px; /* Center the text vertically */
     font-size: 14px;
     background-color: #D9D9D9; /* Adjust background color */
@@ -157,7 +159,7 @@ width: 80px;
 
 
 .event-title{
-    margin-top: 10%;
+    
     margin-left: 10%;
     color: #363636;
     font-family: Inter;
@@ -232,7 +234,7 @@ width: 80px;
   
   .left-tab-option-container {
     position: relative;
-    margin-top: 20%;
+    margin-top: 10%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -275,3 +277,75 @@ select {
     font-size: 16px; /* Adjust font size as needed */
     padding: 10px; /* Adjust padding as needed */
   }
+
+  .toggle-delete-div{
+    display: flex;
+    justify-content: center;
+  }
+
+  
+
+.toggle-delete-btn{
+    
+    height: 56px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: #4d5259;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    border-width: 0px;
+}
+.del-active{
+
+   
+    display: flex;
+    align-items: center;
+    height: 56px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: #793636;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    border-width: 0px;
+
+    
+}
+
+.view-active{
+    display: flex;
+    align-items: center;
+    height: 56px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: #294051;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    border-width: 0px;
+}
+
+.undo-btn{
+    
+    height: 56px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: #4d5259;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    border-width: 0px;
+}
